# Audio

./: README.md
AIUI/: Makefile  Makefile.config
AIUI/include/: audio.hpp  uart.h
AIUI/others/: CMakeLists.txt  udev.conf
AIUI/src/: audio.cpp  param_audio_run  uart.c
